fixes and edits
changed waybar config and fixed cursor not showing up in hyprland.

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -10,7 +10,7 @@
 
 #waybar {
   background: rgba(0, 0, 0, 0);
-  font-family: "JetBrains Mono", "Symbols Nerd Font Mono";
+  font-family: "JetBrainsMonoNL Nerd Font Propo";
   font-weight: bold;
 }
 
@@ -35,8 +35,8 @@
 #workspaces {
   background: @bg;
   color: @text;
-  padding-left: 0.6em;
-  padding-right: 0.6em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
   font-size: 16px;
 }
 
